# xmas-challenge-fork

./: .gitignore  CHALLENGE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  POC-README.md  README.md  TEST_REPORT_TS-001.md  TEST_REPORT_TS-002.md  TEST_REPORT_TS-006.md  TEST_REPORT_TS021.md  TEST_SCENARIOS.md  fix_proposal.json
.claude-plugin/: marketplace.json
.claude/commands/: report-issue.md
.claude/hooks/: learning-capture.sh
.github/: ARCHITECTURE.md  COMPLETE.txt  QUICKREF.md  README.md
.github/ISSUE_TEMPLATE/: auto-report.yml  config.yml
.github/workflows/: .overview.txt  README.md  ai-review-and-merge.yml  auto-fix-workflows.yml  auto-label-issues.yml  auto-merge.yml  auto-triage.yml  deploy-ui.yml  learn-from-interaction.yml  propose-fix.yml  sync-claude-skills.yml  sync-gemini-skills.yml  track-issues.yml  track-prs.yml  validate-examples.yml  validate-plugins.yml
archive/github-docs/: SETUP.md  SUMMARY.md  WORKFLOWS.md
archive/project-history/: CLEANUP_PLAN.md  LEARNING_SYSTEM_SUMMARY.md
automation/graph/: README.md  __init__.py  event_handler.py  export_docs.py  export_json.py  export_learnings.py  knowledge_graph.py
automation/learning/: README.md  analyzer.py  capture.py  feedback.py  proposer.py
automation/web/: README.md  index.html
claude/keboola-core/: .skill-metadata.json  SKILL.md
docs/: INDEX.md  README.md  workflows.md
docs/keboola/: 01-core-concepts.md  02-storage-api.md  03-common-pitfalls.md  (+2 more)
hooks/: .gitignore  CHANGELOG.md  INDEX.md  INTEGRATION.md  QUICKSTART.md  README.md  error-reporter.sh  report-keboola-error.sh
plugins/: POC-NOTICE.md
templates/: DELIVERABLES.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  TEMPLATE_OVERVIEW.md  create-from-template.sh
templates/custom-python/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
templates/custom-python/.github/workflows/: test-template.yml
templates/streamlit-app/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
templates/streamlit-app/.github/workflows/: test-template.yml
templates/streamlit-app/.streamlit/: config.toml  secrets.toml.example
web/: index.html
(+40 files in other folders)
