[project]
name = "keboola-custom-python"
version = "0.1.0"
description = "Keboola Custom Python transformation template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Add your dependencies here
    # Example:
    # "pandas>=2.1.4",
    # "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Uncomment common dependencies as needed:
# data = [
#     "pandas>=2.1.4",
#     "numpy>=1.26.3",
# ]
#
# api = [
#     "requests>=2.31.0",
#     "httpx>=0.26.0",
# ]
#
# validation = [
#     "pydantic>=2.5.3",
#     "jsonschema>=4.20.0",
# ]
#
# excel = [
#     "openpyxl>=3.1.2",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
