[project]
name = "keboola-streamlit-app"
version = "0.1.0"
description = "Interactive Streamlit data app for Keboola"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.39.0",
    "kbcstorage>=0.9.0",
    "pandas>=2.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.5",
]

# Uncomment additional dependencies as needed:
# visualization = [
#     "plotly>=5.18.0",
#     "altair>=5.2.0",
#     "matplotlib>=3.8.2",
# ]
#
# api = [
#     "requests>=2.31.0",
# ]
#
# validation = [
#     "pydantic>=2.5.3",
# ]
#
# utils = [
#     "python-dotenv>=1.0.0",
#     "python-dateutil>=2.8.2",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
